# steam-achievement-translation-installer

./: .gitignore  LICENSE  README.md  THIRD_PARTY_NOTICES.md  pyproject.toml
.github/ISSUE_TEMPLATE/: bug_report_zh.yml
.github/workflows/: ci.yml
installer/: SATLInstaller.iss
scripts/: build.ps1  generate_app_icon.ps1  offline_smoke.py
src/Satl.CliLauncher/: Program.cs  Satl.CliLauncher.csproj
src/Satl.Gui/: App.xaml  App.xaml.cs  MainPage.xaml  MainPage.xaml.cs  MainWindow.xaml  MainWindow.xaml.cs  Package.appxmanifest  Satl.Gui.csproj  app.manifest
src/Satl.Gui/Controls/: NetworkSettingsControl.xaml  NetworkSettingsControl.xaml.cs
src/Satl.Gui/Models/: CatalogStatusPresentation.cs  GameInventoryScope.cs  GameItem.cs  GuiSettings.cs  NetworkSettings.cs  ReplacementPreview.cs  SatlEvent.cs
src/Satl.Gui/Pages/: CloudGamesPage.xaml  (+11 more)
src/satl/: __init__.py  __main__.py  bkv.py  cache_command.py  catalog.py  cli.py  cli_arguments.py  cli_protocol.py  cli_validation.py  errors.py  game_name_sources.py  game_names.py  install_command.py  models.py  native_languages.py  network.py  petition.py  petition_command.py  restore_command.py  scan_command.py  state.py  status_command.py  steam.py  transaction.py  vdf.py
tests/: test_bkv.py  test_catalog.py  test_cli.py  test_cli_modules.py  test_game_name_sources.py  test_game_names.py  test_native_languages.py  test_network.py  test_packaging.py  test_transaction.py  test_vdf_steam.py
tests/Satl.Gui.Tests/: NetworkServicesTests.cs  ProtocolTests.cs  Satl.Gui.Tests.csproj  UpdatePackageCleanupServiceTests.cs
(+19 files in other folders)
